# Casper-projet

./: .dockerignore  .gitignore  CORS_FIX_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_HASH.txt  DEPLOY_HASH_V2.txt  DEPLOY_HASH_V3.txt  DEPLOY_HASH_V4.txt  DEPLOY_HASH_V5_SIMPLIFIED.txt  DEPLOY_HASH_V6_NO_AUTO_INIT.txt  DEPLOY_HASH_V7_OFFICIAL_PATTERNS.txt  Makefile  PROJECT-SUMMARY.md  QUICK-DEPLOY.md  README-APP.md  README.md  RELEASES.md  RELEASE_NOTES.md  RELEASE_NOTES_V16.md  RELEASE_NOTES_V18_V22.md  RELEASE_NOTES_V4.0.md  RELEASE_NOTES_V6.0.md  RELEASE_NOTES_V8.md  SECURITY_AUDIT_BEFORE_AFTER.md  SIMPLE_EXPLANATION.md  SUBMISSION_GUIDE.md  TRANSACTION_HASH_V10_INSTALL_FLAG.txt  TRANSACTION_HASH_V8_CASPER20.txt  TRANSACTION_HASH_V9_MINIMAL.txt  V23-release-notes.md  VIDEO_SCRIPT.md  VOTRE_ADRESSE.txt  VOTRE_CLE_PUBLIQUE.txt  deploy-v2.sh  deploy-v4.sh  deploy.sh  help-message.txt  vercel.json
api/: contract-stats.ts  price.ts  rpc-proxy.js  validators.ts
archive/: CHANGELOG.md  README.md  RELEASE_NOTES_V5.0.md  V6.1-DEVELOPMENT-NOTES.md  deploy-v5.sh  vercel-root-old.json
archive/api-typescript-old/: contract-stats.ts  validator-delegations.ts  withdrawals.ts
archive/frontend-v1/: index.html
archive/infra/: README.md
archive/infra/docker/: client.dockerfile  event-handler.dockerfile  nginx.conf
archive/infra/local/: docker-compose.yaml
archive/scripts-v15-v20/: admin_delegate_v20.rs  check_delegation_debug.rs  deploy_v16.rs  set_validator_v16.rs
archive/scripts-v9-v13/: README.md  deploy_v11.rs  deploy_v12.rs  deploy_v13.rs  test_stake_simple.rs  test_stake_v13.rs  test_stake_v82.rs
archive/server/: .env.example  README.md  package.json
archive/server/src/: event-handler.ts  events.ts
archive/server/src/cspr-cloud/: CSPRCloudAPIClient.ts
archive/server/src/entity/: Stake.ts
archive/stcspr_token_v9/: README.md
client/: .env.example  README.md  config-overrides.js  package-lock.json  package.json  tsconfig.json  vercel.json
client/api/: account.js  contract-stats.js  contract-stats.ts  debug-withdrawal.ts  price.js  price.ts  validator-delegations.js
client/public/: config.js  index.html  manifest.json  proxy_caller.wasm
client/src/: App.tsx  globals.d.ts  index.tsx  setupProxy.js
client/src/components/: ActivityFeed.tsx  AdminPanel.tsx  Confetti.tsx  Dashboard.tsx  DemoBanner.tsx  ExchangeRateChart.tsx  ExportCSV.tsx  FAQ.tsx  FAQBot.tsx  GlobalStats.tsx  LanguageSwitcher.tsx  Leaderboard.tsx  NFTBadges.tsx  Navigation.tsx  NotificationSettings.tsx  PortfolioHistory.tsx  PriceAlert.tsx  PriceChart.tsx  RewardsChart.tsx  SettingsPanel.tsx  SimulationMode.tsx  StakeHistory.tsx  StakingCalculator.tsx  StakingForm.tsx  TVLChart.tsx  Toast.tsx  Tooltip.tsx  TransactionTracker.tsx  V15StatsCard.tsx  ValidatorComparator.tsx  ValidatorRanking.tsx  WalletConnect.tsx  WelcomeModal.tsx  WithdrawalStatus.tsx
client/src/components/stake/: ValidatorSelector.css  ValidatorSelector.tsx
client/src/components/ui/: AddressCopy.tsx  CustomCursor.tsx  FloatingBackground.tsx  FloatingGhosts.tsx  GalaxyBackground.tsx  Icons.tsx  Marquee.tsx  ParallaxReveal.tsx  SmoothScroll.tsx
client/src/context/: BalanceContext.tsx  LanguageContext.tsx
client/src/hooks/: useBalance.ts  useContractData.ts  useCsprClick.ts  useStaking.ts
client/src/pages/: AnalyticsPage.tsx  GuidePage.tsx  HomePage.tsx  StakePage.tsx  ValidatorsPage.tsx
client/src/services/: api.ts  casper.ts  config.ts  contractReader.ts  csprCloud.ts  proxyCallerWasm.ts  transaction.ts  validatorService.ts
client/src/styles/: designTokens.ts
client/src/types/: index.ts
client/src/utils/: notificationSound.ts
deploy/: stakevue_contract_v61.wasm
docs/: README.md  V6.1-DEVELOPMENT-NOTES.md  V6.1-RELEASE-NOTES.md
docs/images/: .gitkeep
frontend/css/: style.css
frontend/js/: app.js  casper-rpc-client.js  donation-example.js
infra/: README.md
infra/docker/: api.dockerfile
infra/local/: .env.example  init-db.sql
scripts/: .env.example  README.md  add-rewards.js  check-stats.js  package.json
server/: railway-handler.json  railway.json
server/src/: api.ts  config.ts  data-source.ts
server/src/entity/: Validator.ts
server/src/middleware/: pagination.ts
server/src/repository/: StakeRepository.ts  ValidatorRepository.ts
smart-contract/: Cargo.toml
smart-contract-odra/: Cargo.toml  Odra.toml  README.md
smart-contract-odra/src/: lib.rs
smart-contract/src/: lib.rs
stakevue_contract/: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Odra.toml  README.md  add_all_validators.sh
stakevue_contract/resources/: contracts.toml
stakevue_contract/src/: lib.rs  simple_stake.rs
stcspr_token/: Cargo.toml  Odra.toml
stcspr_token/src/: lib.rs
