[package]
name = "stakevue"
version = "8.0.0"
edition = "2021"

[dependencies]
odra = { version = "2.2.0", default-features = false }
odra-cli = { version = "2.2.0", optional = true }
odra-casper-livenet-env = { version = "2.2.0", optional = true }

[dev-dependencies]
odra-test = "2.2.0"

[features]
default = []
livenet = ["odra-cli", "odra-casper-livenet-env"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[[bin]]
name = "stakevue-cli"
path = "bin/cli.rs"
required-features = ["livenet"]
test = false
