[package]
name = "stakevue"
version = "8.0.0"
edition = "2021"

[dependencies]
odra = { version = "2.2.0", default-features = false }
odra-cli = { version = "2.2.0", optional = true }
odra-casper-livenet-env = { version = "2.2.0", optional = true }
odra-build = { version = "2.2.0", optional = true }

[dev-dependencies]
odra-test = "2.2.0"

[features]
default = []
livenet = ["odra-cli", "odra-casper-livenet-env"]
build-contract = ["odra-build"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[[bin]]
name = "stakevue_build_contract"
path = "bin/build_contract.rs"
required-features = ["build-contract"]
test = false

[[bin]]
name = "stakevue-cli"
path = "bin/cli.rs"
required-features = ["livenet"]
test = false
