[package]
name = "stakevue"
version = "8.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
odra = "2.2.0"

[dev-dependencies]
odra-test = "2.2.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[[bin]]
name = "stakevue_build_contract"
path = "bin/stakevue_build_contract.rs"
test = false
