[package]
name = "stakevue_contract"
version = "16.0.0"
edition = "2021"

[dependencies]
odra = { version = "2.4.0", default-features = false }
odra-modules = { version = "2.4.0", default-features = false }
odra-cli = { version = "2.4.0", optional = true }
odra-casper-livenet-env = { version = "2.4.0", optional = true }

[dev-dependencies]
odra-test = { version = "2.4.0", default-features = false }

[build-dependencies]
odra-build = { version = "2.4.0", default-features = false }

[features]
default = []
livenet = ["odra-cli", "odra-casper-livenet-env"]

# ============================================================================
# BUILD SCRIPTS
# ============================================================================

[[bin]]
name = "stakevue_contract_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "stakevue_contract_build_schema"
path = "bin/build_schema.rs"
test = false

# ============================================================================
# V15 SCRIPTS (CURRENT - Exchange Rate)
# ============================================================================

[[bin]]
name = "stakevue_cli"
path = "bin/cli.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "deploy_v15"
path = "bin/deploy_v15.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "test_stake_v15"
path = "bin/test_stake_v15.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "test_add_rewards_v15"
path = "bin/test_add_rewards_v15.rs"
required-features = ["livenet"]
test = false

# ============================================================================
# NOTE: Old scripts archived
# - V14 scripts: /archive/scripts-v14/
# - V9-V13 scripts: /archive/scripts-v9-v13/
# ============================================================================
