[package]
name = "stakevue_contract"
version = "21.0.0"
edition = "2021"

[dependencies]
odra = { git = "https://github.com/odradev/odra", branch = "release/2.5.0", default-features = false }
odra-modules = { git = "https://github.com/odradev/odra", branch = "release/2.5.0", default-features = false }
odra-cli = { git = "https://github.com/odradev/odra", branch = "release/2.5.0", optional = true }
odra-casper-livenet-env = { git = "https://github.com/odradev/odra", branch = "release/2.5.0", optional = true }

[dev-dependencies]
odra-test = { git = "https://github.com/odradev/odra", branch = "release/2.5.0", default-features = false }

[build-dependencies]
odra-build = { git = "https://github.com/odradev/odra", branch = "release/2.5.0", default-features = false }

[features]
default = []
livenet = ["odra-cli", "odra-casper-livenet-env"]

# ============================================================================
# BUILD SCRIPTS
# ============================================================================

[[bin]]
name = "stakevue_contract_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "stakevue_contract_build_schema"
path = "bin/build_schema.rs"
test = false

# ============================================================================
# V17 SCRIPTS (CURRENT - Multi-Validator + Withdrawal Queue)
# ============================================================================

[[bin]]
name = "deploy_v17"
path = "bin/deploy_v17.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "add_validators_v17"
path = "bin/add_validators_v17.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "test_stake_v17"
path = "bin/test_stake_v17.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "test_unstake_v17"
path = "bin/test_unstake_v17.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "check_delegation_debug"
path = "bin/check_delegation_debug.rs"
required-features = ["livenet"]
test = false

# ============================================================================
# V21 SCRIPTS (Odra 2.5.0 Upgrade)
# ============================================================================

[[bin]]
name = "deploy_v21"
path = "bin/deploy_v21.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "add_validators_v21"
path = "bin/add_validators_v21.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "test_stake_v21"
path = "bin/test_stake_v21.rs"
required-features = ["livenet"]
test = false

# ============================================================================
# V20 SCRIPTS (Wise Lending Pool Architecture - admin delegate/undelegate)
# ============================================================================

[[bin]]
name = "deploy_v20"
path = "bin/deploy_v20.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "add_validators_v20"
path = "bin/add_validators_v20.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "test_stake_v20"
path = "bin/test_stake_v20.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "admin_delegate_v20"
path = "bin/admin_delegate_v20.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "admin_undelegate_v20"
path = "bin/admin_undelegate_v20.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "admin_add_liquidity_v20"
path = "bin/admin_add_liquidity_v20.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "test_request_unstake_v20"
path = "bin/test_request_unstake_v20.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "test_claim_v20"
path = "bin/test_claim_v20.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "check_status_v20"
path = "bin/check_status_v20.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "auto_delegate_bot"
path = "bin/auto_delegate_bot.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "stakevue_bot"
path = "bin/stakevue_bot.rs"
required-features = ["livenet"]
test = false

# ============================================================================
# V19 SCRIPTS (Native Odra delegate/undelegate - fixes error 64658)
# ============================================================================

[[bin]]
name = "deploy_v19"
path = "bin/deploy_v19.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "add_validators_v19"
path = "bin/add_validators_v19.rs"
required-features = ["livenet"]
test = false

# ============================================================================
# V18 SCRIPTS (Multi-Validator + Withdrawal Queue + Delegation Debug)
# ============================================================================

[[bin]]
name = "deploy_v18"
path = "bin/deploy_v18.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "add_validators_v18"
path = "bin/add_validators_v18.rs"
required-features = ["livenet"]
test = false

# ============================================================================
# V16 SCRIPTS (Validator Delegation - Single Validator)
# ============================================================================

[[bin]]
name = "deploy_v16"
path = "bin/deploy_v16.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "set_validator_v16"
path = "bin/set_validator_v16.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "test_stake_v16"
path = "bin/test_stake_v16.rs"
required-features = ["livenet"]
test = false

# ============================================================================
# V15 SCRIPTS (Exchange Rate)
# ============================================================================

[[bin]]
name = "stakevue_cli"
path = "bin/cli.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "deploy_v15"
path = "bin/deploy_v15.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "test_stake_v15"
path = "bin/test_stake_v15.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "test_add_rewards_v15"
path = "bin/test_add_rewards_v15.rs"
required-features = ["livenet"]
test = false

# ============================================================================
# NOTE: Old scripts archived
# - V14 scripts: /archive/scripts-v14/
# - V9-V13 scripts: /archive/scripts-v9-v13/
# ============================================================================
