[package]
name = "stcspr_token"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "2.4.0", default-features = false }

[dev-dependencies]
odra-test = { version = "2.4.0", default-features = false }

[build-dependencies]
odra-build = { version = "2.4.0", default-features = false }

[features]
default = []

[[bin]]
name = "stcspr_token_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "stcspr_token_build_schema"
path = "bin/build_schema.rs"
test = false
